--- a/less/variables.less
+++ b/less/variables.less
@@ -15,7 +15,7 @@
 @gray-lighter:           #999; // #eee
 
 @brand-primary:         @gray-light;
-@brand-success:         #62c462;
+@brand-success:         #003909;
 @brand-info:            #5bc0de;
 @brand-warning:         #f89406;
 @brand-danger:          #ee5f5b;
@@ -301,7 +301,7 @@
 
 // Large screen / wide desktop
 //** Deprecated `@screen-lg` as of v3.0.1
-@screen-lg:                  1200px;
+@screen-lg:                  1200px; //1200px
 @screen-lg-min:              @screen-lg;
 //** Deprecated `@screen-lg-desktop` as of v3.0.1
 @screen-lg-desktop:          @screen-lg-min;
