more fixes for new addon system.

--- a/app/addons/do/vagrant/body.hbs
+++ b/app/addons/do/vagrant/body.hbs
@@ -1,19 +1,19 @@
-config.vm.define "do", primary: false, autostart: false do |web|
+config.vm.define "digitalocean", primary: false, autostart: false do |digitalocean|
   unless Vagrant.has_plugin?("vagrant-digitalocean")
     raise 'vagrant-digitalocean plugin is not installed!'
   end
 
   {{#with do.options}}
-  do.vm.box               = "dummy"
-  do.vm.hostname          = "{{server_name}}"
-  do.nfs.functional       = false
-  do.ssh.private_key_path = "{{private_key_path}}"
-  do.ssh.username         = "{{private_key_user}}"
+  digitalocean.vm.box               = "dummy"
+  digitalocean.vm.hostname          = "{{server_name}}"
+  digitalocean.nfs.functional       = false
+  digitalocean.ssh.private_key_path = "{{private_key_path}}"
+  digitalocean.ssh.username         = "{{private_key_user}}"
   {{#each synced_folders}}
-  do.vm.synced_folder "{{from}}", "{{to}}", owner: "{{owner}}", group: "{{group}}", type: "rsync"
+  digitalocean.vm.synced_folder "{{from}}", "{{to}}", owner: "{{owner}}", group: "{{group}}", type: "rsync"
   {{/each}}
 
-  do.vm.provider :digital_ocean do |provider|
+  digitalocean.vm.provider :digital_ocean do |provider|
     provider.token        = "{{token}}"
     provider.image        = "{{distribution}}"
     provider.region       = "{{data_center}}"
@@ -22,16 +22,18 @@ config.vm.define "do", primary: false, autostart: false do |web|
   end
   {{/with}}
 
-  do.vm.provision "shell" do |shell|
+  digitalocean.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ["www", ".git"]
+
+  digitalocean.vm.provision "shell" do |shell|
       shell.path = "scripts/pre-puppet.sh"
       shell.args = ['remote']
   end
-  do.vm.provision "puppet" do |puppet|
+  digitalocean.vm.provision "puppet" do |puppet|
      puppet.manifests_path = "puppet"
      puppet.manifest_file  = "manifests"
      puppet.hiera_config_path = "hiera.yaml"
      puppet.options = "--parser=future --modulepath=~/.vstack/modules"
   end
-  do.vm.provision "shell", path: "scripts/post-puppet.sh"
+  digitalocean.vm.provision "shell", path: "scripts/post-puppet.sh"
 end
 
